mlflow/ingress-mlflow.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mlflow
  namespace: mlflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow.bayescluster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: mlflow
             port:
                number: 5000
